# text-complex-plus

./: .gitignore  CMakeLists.txt  README.md
include/text-complex-plus/access/: api.hpp  api.txx  bdict.hpp  bdict.txx  blockbuf.hpp  blockbuf.txx  brcvt.hpp  brcvt.txx  brmeta.hpp  brmeta.txx  ctxtmap.hpp  ctxtmap.txx  ctxtspan.hpp  ctxtspan.txx  fixlist.hpp  fixlist.txx  gaspvec.hpp  hashchain.hpp  hashchain.txx  inscopy.hpp  offtable.hpp  ringdist.hpp  ringdist.txx  ringslide.hpp  ringslide.txx  seq.hpp  util.hpp  util.txx  woff2.hpp  zcvt.hpp  zcvt.txx  zutil.hpp
src/: CMakeLists.txt  api.cpp  bdict.cpp  bdict04.cpp  bdict05.cpp  bdict06.cpp  bdict07.cpp  bdict08.cpp  bdict09.cpp  bdict10.cpp  bdict11.cpp  bdict12.cpp  bdict13.cpp  bdict14.cpp  bdict15.cpp  bdict16.cpp  bdict17.cpp  bdict18.cpp  bdict19.cpp  bdict20.cpp  bdict21.cpp  bdict22.cpp  bdict23.cpp  bdict24.cpp  bdict_cb.cpp  bdict_p.hpp  blockbuf.cpp  brcvt.cpp  brmeta.cpp  ctxtmap.cpp  ctxtmap_p.hpp  ctxtspan.cpp  fixlist.cpp  gaspvec.cpp  hashchain.cpp  inscopy.cpp  offtable.cpp  ringdist.cpp  ringslide.cpp  seq.cpp  (+4 more)
tcmplx-access-plus/: CMakeLists.txt  api.cpp  api.hpp  api.txx  ctxtmap.cpp  ctxtmap.hpp  ctxtmap.txx  fixlist.cpp  fixlist.hpp  fixlist.txx  inscopy.cpp  inscopy.hpp  inscopy.txx  offtable.cpp  offtable.hpp  ringdist.cpp  ringdist.hpp  ringdist.txx  seq.cpp  seq.hpp  seq.txx  util.cpp  util.hpp  util.txx  woff2.cpp  woff2.hpp
tests/: CMakeLists.txt  tca_api.cpp  tca_bdict.cpp  tca_blockbuf.cpp  tca_brcvt.cpp  tca_brmeta.cpp  tca_ctxtmap.cpp  tca_ctxtspan.cpp  tca_fixlist.cpp  tca_gaspvec.cpp  tca_hashchain.cpp  tca_inscopy.cpp  tca_offtable.cpp  tca_ringdist.cpp  tca_ringslide.cpp  tca_seq.cpp  tca_util.cpp  tca_woff2.cpp  tca_zcvt.cpp  tca_zutil.cpp  testfont.cpp  testfont.hpp
tests/munit-plus/: .appveyor.yml  .travis.yml  COPYING  Makefile  README.md  example.cpp  meson.build  munit.cpp  munit.hpp
tools/: CMakeLists.txt  tca_brcvt.cpp  tca_zcvt.cpp
